# Mobile_Macnum_Robot

./: README.md  group_project_ppt.pptx
ROS1 Package/Motors_code/: Motors_code.ino
ROS1 Package/bridge/: CMakeLists.txt  package.xml
ROS1 Package/bridge/scripts/: bridge.py
ROS2 Package/: CMakeLists.txt  package.xml
ROS2 Package/config/: joystick_gazebo.yaml
ROS2 Package/launch/: controlled_mec_bot.launch.py  launch_sim.launch.py  mec_bot.launch.py  rsp.launch.py
ROS2 Package/src/: mecanum_bot.py
config/: joystick.yaml
description/: gazebo_control.xacro  robot_core.xacro
launch/: joystick.launch.py
src/: PID.py  bridge.py  pid_params.py  quat_to_eul.py  recs.py
